--- a/Project/quiz.html
+++ b/Project/quiz.html
@@ -24,23 +24,20 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark py-3">
     <div class="container">
-        <a class="navbar-brand" href="">Logo</a>
+        <a class="navbar-brand" href="index.html">Peduli Lingkungan</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Tentang Kami</a>
+                    <a class="nav-link" href="#about">Tentang Kami</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Layanan</a>
+                    <a class="nav-link" href="#services">Layanan</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Kontak</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="quiz.html">Quiz</a>
+                    <a class="nav-link" href="#activity">Activity</a>
                 </li>
             </ul>
         </div>
@@ -70,7 +67,7 @@
                 </div>
             </div>
         </form>
-        <button class="btn next-btn">Next Question</button>
+        <button class="btn btn-success next-btn">Next Question</button>
     </div>
     <div class="carousel-slide text-center">
         <h1 class="question">Question 2: Which planet is known as the Red Planet?</h1>
@@ -94,7 +91,7 @@
                 </div>
             </div>
         </form>
-        <button class="btn next-btn">Next Question</button>
+        <button class="btn btn-success next-btn">Next Question</button>
     </div>
     <div class="carousel-slide text-center">
         <h1 class="question">Question 3: Buanglah sampah pada ?</h1>
@@ -118,36 +115,35 @@
                 </div>
             </div>
         </form>
-        <button class="btn next-btn">Next Question</button>
+        <button class="btn btn-success next-btn ">Next Question</button>
     </div>
     <div class="carousel-slide text-center">
         <h1 class="question">Yakin dengan jawaban Anda?</h1>
-        <button class="btn confirm-btn">Ya, Saya Yakin</button>
+        <button class="btn btn-success confirm-btn">Ya, Saya Yakin</button>
     </div>
     <div class="carousel-slide text-center">
         <h1 class="question">Terima kasih telah mengikuti kuis!</h1>
         <div class="result"></div>
-        <button class="btn btn-ulangi"><a href="quiz.html">Ulangi</a></button>
+        <button class="btn btn-success btn-ulangi"><a href="quiz.html">Ulangi</a></button>
     </div>
 </div>
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#29c5f6" fill-opacity="1" d="M0,256L26.7,256C53.3,256,107,256,160,240C213.3,224,267,192,320,197.3C373.3,203,427,245,480,245.3C533.3,245,587,203,640,202.7C693.3,203,747,245,800,250.7C853.3,256,907,224,960,224C1013.3,224,1067,256,1120,277.3C1173.3,299,1227,309,1280,304C1333.3,299,1387,277,1413,266.7L1440,256L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#5ca904" fill-opacity="1" d="M0,256L26.7,256C53.3,256,107,256,160,240C213.3,224,267,192,320,197.3C373.3,203,427,245,480,245.3C533.3,245,587,203,640,202.7C693.3,203,747,245,800,250.7C853.3,256,907,224,960,224C1013.3,224,1067,256,1120,277.3C1173.3,299,1227,309,1280,304C1333.3,299,1387,277,1413,266.7L1440,256L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>
 
 <!-- Footer -->
-<footer class="footer py-3" style="background-color: #29c5f6; color: white;">
+<footer class="footer py-3" style="background-color: #5ca904; color: white;">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6">
                 <div class="d-flex justify-content-center align-items-center">
                     <!-- <img src="logo.png" alt="Logo" width="40"> -->
-                    <h2>Logo</h2>
+                    <h4>Peduli Lingkungan</h4>
                     <span class="ml-2">&copy; Copyright 2023</span>
                 </div>
             </div>
             <div class="col-md-6 text-center">
                 <a href="https://www.instagram.com/" class="social-media-link" style="color: white; font-size: 20px; margin-right: 10px;"><i class="fab fa-instagram"></i></a>
-                <a href="https://www.facebook.com/" class="social-media-link" style="color: white; font-size: 20px; margin-right: 10px;"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.linkedin.com/" class="social-media-link" style="color: white; font-size: 20px; margin-right: 10px;"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/" class="social-media-link" style="color: white; font-size: 20px; margin-right: 10px;"><i class="fas fa-globe"></i></a>
                 <a href="https://www.google.com/" class="social-media-link" style="color: white; font-size: 20px; margin-right: 10px;"><i class="fab fa-google"></i></a>
             </div>
         </div>
